# bookstore-api

./: .gitignore  .pdm-python  main.py  pyproject.toml  requirements.txt
