[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sparrow", email = "."},
]
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn[standard]>=0.23.2",
]
[tool.pdm.scripts]
start = "uvicorn main:app --reload"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

